移除通用请求幂等逻辑
